--- a/frontend/information retrieval project 2/package.json
+++ b/frontend/information retrieval project 2/package.json
@@ -10,8 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "axios": "^1.7.9",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.4.0",
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.1.0",
+    "react-toastify": "^11.0.2",
+    "recharts": "^2.15.0",
+    "redux": "^5.0.1",
+    "redux-toolkit": "^1.1.2",
+    "validator": "^13.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
