--- a/frontend/information retrieval project 2/package.json
+++ b/frontend/information retrieval project 2/package.json
@@ -15,7 +15,12 @@
     "@fontsource/roboto": "^5.1.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "@mui/x-data-grid": "^7.23.4",
+    "@mui/x-data-grid-generator": "^7.23.4",
+    "@mui/x-data-grid-premium": "^7.23.4",
+    "@mui/x-data-grid-pro": "^7.23.4",
     "@reduxjs/toolkit": "^2.5.0",
+    "ag-grid-react": "^33.0.3",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
