--- a/frontend/information retrieval project 2/package.json
+++ b/frontend/information retrieval project 2/package.json
@@ -23,6 +23,7 @@
     "ag-grid-react": "^33.0.3",
     "axios": "^1.7.9",
     "react": "^18.3.1",
+    "react-devtools": "^6.0.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.4.0",
