--- a/frontend/information retrieval project 2/package.json
+++ b/frontend/information retrieval project 2/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@devexpress/dx-react-chart": "^4.0.9",
+    "@devexpress/dx-react-chart-bootstrap4": "^4.0.9",
+    "@devexpress/dx-react-chart-material-ui": "^4.0.9",
+    "@devexpress/dx-react-core": "^4.0.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.0",
@@ -21,7 +25,11 @@
     "@mui/x-data-grid-pro": "^7.23.4",
     "@reduxjs/toolkit": "^2.5.0",
     "ag-grid-react": "^33.0.3",
+    "apexcharts": "^4.3.0",
     "axios": "^1.7.9",
+    "chartjs-plugin-zoom": "^2.2.0",
+    "d3-scale": "^4.0.2",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
     "react-devtools": "^6.0.1",
     "react-dom": "^18.3.1",
